# solana-token-sale-program

./: .gitignore  LICENSE  README.md  key  programId.md
client/: .eslintrc  .example-env  .gitignore  package-lock.json  package.json  tsconfig.json
client/src/: account.ts  buyToken.ts  closeTokenSale.ts  initTokenSaleProgram.ts  setup.ts  startTokenSale.ts  transaction.ts  updatePrice.ts  utils.ts
contract/: Cargo.toml
contract/src/: instruction.rs  processor.rs  state.rs
program/: Cargo.toml
program/src/: error.rs  instruction.rs  processor.rs  state.rs
