[package]
name = "spl-tokensale-solana"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[features]
no-entrypoint = []

[dependencies]
solana-program = "2.0.7"
thiserror = "1.0.63"
spl-token = {version = "6.0.0", features = ["no-entrypoint"]}
arrayref = "0.3.8"
solana-frozen-abi = "=2.0.7"
zeroize = "=1.3.0"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
overflow-checks = true

[profile.dev]
overflow-checks = true
